[package]
name = "boptions"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "boptions"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pyth-client = "0.1.1"
anchor-lang = "0.7.0"
solana-program = "1.5.0"
anchor-spl = "0.7.0"
bytemuck = { version = "1.4.0" }
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
